@@ -34,7 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
-* 
+* [jan] Fix editing tasks via CalDAV (Bug #12745).
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1420,7 +1420,7 @@
    <date>2013-08-27</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
-* 
+* [jan] Fix editing tasks via CalDAV (Bug #12745).
    </notes>
   </release>
  </changelog>
